# solana-dapp-anchor-v030

./: README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
anchor/: Anchor.toml  package.json  tsconfig.lib.json
anchor/programs/app-1713693601/: Cargo.toml
anchor/programs/app-1713693601/src/: lib.rs
anchor/src/: app-1713693601-exports.ts  index.ts
anchor/tests/: app-1713693601.spec.ts
web/: tsconfig.json
web/app/: layout.tsx
web/app/app-1713693601/: page.tsx
web/components/app-1713693601/: app-1713693601-data-access.tsx  app-1713693601-feature.tsx  app-1713693601-ui.tsx
web/components/ui/: ui-layout.tsx
